Major bug fixes to mobile. Increased homepage performance, horizontal scroll disabled, and layout improvements.

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -490,6 +490,8 @@ height: auto;
     background-color: $dark;
     z-index: 100;
     height: 110vh;
+
+    display: flex;
 }
 
 #showreelThumbnail{
@@ -526,6 +528,7 @@ height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 1;
 
     aspect-ratio: 16/9;
     width: 100vw;
@@ -621,7 +624,7 @@ height: auto;
         padding-top: 0vh;
 
         img {
-            padding-top: 5vh;
+            margin-top: 5vh;
         }
     }
 }
@@ -726,10 +729,26 @@ height: auto;
         margin: 0;
 
         width: 100%;
+        
+        h1 {
+            text-align: left;
+        }
+
+        img {
+            width: 75%;
+            height: auto;
+            padding-bottom: 5vh;
+        }
+    }
+
+    #aboutMeText {
+        grid-template-columns: 1fr;
+        row-gap: 2vh;
+        padding-top: 4vh;
     }
     
     #aboutMeExperience {
-        padding-top: 20vh;
+        padding-top: 15vh;
     }
 
     #experienceList{
@@ -1012,6 +1031,13 @@ $red: #CE1126;
 }
 
 @media screen and (max-device-width: 768px) {
+    #navContainer {
+        ul {
+            gap: 4rem;
+        }
+    }
+    
+    
     .bjb-content-wrapper {
         padding: 5vh $horzMarginSize;
     
